Update viewport settings and enhance responsive design in CSS

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang = "zh-Hant">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
     <title>Bézier Curve Demo</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
                 <button id="clear">CLEAR</button>
                 <button id="toggle-controls">TOGGLE HANDLES</button>
                 </div>
-                <div style="margin-top:8px; font-size:12px; opacity:.8">
+                <div style="margin-top:8px; opacity:.8">
                     <p>預設為 ADD POINT 模式，可以直接畫點</p>
                     <p>點擊 EDIT CURVE 可以更好地控制線條 </p>
                     <p>雙擊錨點：切換平滑/尖角；雙擊空白處：結束新增。</p>
